# gpm

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  appveyor.yml  build.rs  renovate.json
gitlfs/: Cargo.toml
gitlfs/src/: lib.rs
script/: build-release.sh  publish.ps1  publish.sh  release.sh
src/: gpm.rs  main.rs  ssh_config.pest
src/gpm/: command.rs  error.rs  file.rs  git.rs  mod.rs  package.rs  ssh.rs  ssh_config.pest  style.rs
src/gpm/command/: clean.rs  download.rs  install.rs  update.rs
