[package]
name = "gpm"
version = "0.18.0"
authors = ["Jean-Marc Le Roux <jeanmarc.leroux@aerys.in>"]
edition = "2018"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

[dependencies.gitlfs]
path = "./gitlfs"

[dependencies]
clap = "2.34.0"
tempfile = "3.1.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
git2 = "0.16.0"
url = "2.3.1"
tar = "0.4.38"
flate2 = "1.0.25"
rpassword = "5.0.1"
pest = "2.5.3"
pest_derive = "2.5.3"
regex = "1.7.1"
indicatif = "0.16.2"
console = "0.15.4"
crypto-hash = "0.3.4"
dirs = "3.0.2"
semver = "1.0.16"
dotenv = "0.15.0"
err-derive = "0.3.1"
termimad = "0.10.3"
crossterm = "0.19.0"
base64 = "0.21.0"
zeroize = "1.5.7"
openssl-probe = "0.1.5"

[build-dependencies]
vergen = { version = "5.1.17", default-features = false, features = ["build"]}
anyhow = "1.0.68"
