[package]
name = "gpm"
version = "0.18.0"
authors = ["Jean-Marc Le Roux <jeanmarc.leroux@aerys.in>"]
edition = "2018"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

[dependencies.gitlfs]
path = "./gitlfs"

[dependencies]
clap = "2.34.0"
tempfile = "3.8.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
git2 = "0.18.0"
url = "2.4.1"
tar = "0.4.40"
flate2 = "1.0.27"
rpassword = "5.0.1"
pest = "2.7.2"
pest_derive = "2.7.2"
regex = "1.9.4"
indicatif = "0.16.2"
console = "0.15.7"
crypto-hash = "0.3.4"
dirs = "5.0.1"
semver = "1.0.18"
dotenv = "0.15.0"
err-derive = "0.3.1"
termimad = "0.10.3"
crossterm = "0.19.0"
base64 = "0.21.3"
zeroize = "1.6.0"
openssl-probe = "0.1.5"

[build-dependencies]
vergen = { version = "7.5.1", default-features = false, features = ["build"]}
anyhow = "1.0.75"
